<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosPedidoActivity">

    <TextView
        android:id="@+id/tv_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_direccion"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/et_direccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_direccion"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/tv_ciudad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_direccion" />

    <TextView
        android:id="@+id/tv_ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_ciudad"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/et_ciudad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_direccion" />

    <EditText
        android:id="@+id/et_ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_ciudad"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/tv_cp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ciudad" />

    <TextView
        android:id="@+id/tv_cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_cp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/et_cp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ciudad" />

    <EditText
        android:id="@+id/et_cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_cp"
        android:inputType="number"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/btn_finalizar_pedeido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cp" />

    <Button
        android:id="@+id/btn_finalizar_pedeido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:onClick="finalizar"
        android:text="@string/btn_finalizar_pedeido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cp" />

</androidx.constraintlayout.widget.ConstraintLayout>