<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClienteActivity">

    <TextView
        android:id="@+id/tv_nombre_apellidos_usuario_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_nombre_apellidos_usuario_cliente"
        app:layout_constraintBottom_toTopOf="@+id/iv_usuario_cliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_hacer_pedidos_cliente"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:onClick="hacerPedido"
        android:text="@string/btn_hacer_pedidos_cliente"
        app:layout_constraintBottom_toTopOf="@+id/btn_ver_pedidos_en_tramite_cliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_perfil_admin" />

    <Button
        android:id="@+id/btn_ver_pedidos_en_tramite_cliente"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:onClick="verPedidosTramite"
        android:text="@string/btn_ver_pedidos_en_tramite_cliente"
        app:layout_constraintBottom_toTopOf="@+id/btn_ver_compras_realizadas_cliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hacer_pedidos_cliente" />

    <Button
        android:id="@+id/btn_ver_compras_realizadas_cliente"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:onClick="verComprasRealizadas"
        android:text="@string/btn_ver_compras_realizadas_cliente"
        app:layout_constraintBottom_toTopOf="@+id/btn_salir_cliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ver_pedidos_en_tramite_cliente" />

    <Button
        android:id="@+id/btn_salir_cliente"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:onClick="salir"
        android:text="@string/btn_salir_cliente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ver_compras_realizadas_cliente" />

    <ImageView
        android:id="@+id/iv_usuario_cliente"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/iv_usuario_cliente"
        app:layout_constraintBottom_toTopOf="@+id/btn_perfil_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_apellidos_usuario_cliente"
        app:srcCompat="@drawable/maria" />

    <Button
        android:id="@+id/btn_perfil_admin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:onClick="perfil"
        android:text="@string/btn_perfil_cliente"
        app:layout_constraintBottom_toTopOf="@+id/btn_hacer_pedidos_cliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_usuario_cliente" />
</androidx.constraintlayout.widget.ConstraintLayout>