<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarDatosActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/tv_titulo_perfil"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/imageViewUsuarioPerfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewUsuarioPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/et_nombre_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ines" />

        <EditText
            android:id="@+id/et_nombre_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:ems="10"
            android:hint="@string/et_nombre_perfil"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/et_apellidos_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewUsuarioPerfil" />

        <EditText
            android:id="@+id/et_apellidos_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:ems="10"
            android:hint="@string/et_apellidos_perfil"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/et_email_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nombre_perfil" />

        <EditText
            android:id="@+id/et_email_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:ems="10"
            android:hint="@string/et_email_perfil"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@+id/et_old_pass_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_apellidos_perfil" />

        <EditText
            android:id="@+id/et_old_pass_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:ems="10"
            android:hint="@string/et_old_pass_perfil"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/et_new_pass_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_perfil" />

        <EditText
            android:id="@+id/et_new_pass_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:ems="10"
            android:hint="@string/et_new_pass_perfil"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/et_conf_pass_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_old_pass_perfil" />

        <EditText
            android:id="@+id/et_conf_pass_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:ems="10"
            android:hint="@string/et_conf_pass_perfil"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/ckb_admin_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_new_pass_perfil" />

        <CheckBox
            android:id="@+id/ckb_admin_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/ckb_admin_perfil"
            app:layout_constraintBottom_toTopOf="@+id/bt_guardar_datos_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_conf_pass_perfil" />

        <Button
            android:id="@+id/bt_guardar_datos_perfil"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:onClick="guardar"
            android:text="@string/btn_guardar_datos_perfil"
            app:layout_constraintBottom_toTopOf="@+id/bt_hacer_foto_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ckb_admin_perfil" />

        <Button
            android:id="@+id/bt_hacer_foto_perfil"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:onClick="hacerFoto"
            android:text="@string/btn_hacer_foto"
            app:layout_constraintBottom_toTopOf="@+id/bt_seleccionar_imagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_guardar_datos_perfil" />

        <Button
            android:id="@+id/bt_seleccionar_imagen"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:onClick="seleccionarImagen"
            android:text="@string/btn_seleccionar_imagen"
            app:layout_constraintBottom_toTopOf="@+id/btn_cancelar_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_hacer_foto_perfil" />

        <Button
            android:id="@+id/btn_cancelar_perfil"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:onClick="cancelar"
            android:text="@string/btn_cancelar_perfil"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_seleccionar_imagen" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>