<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HacerPedidoActivity">

    <TextView
        android:id="@+id/tv_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_categoria"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCategoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_producto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_categoria" />

    <TextView
        android:id="@+id/tv_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_producto"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategoria" />

    <Spinner
        android:id="@+id/spinnerProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_cantidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_producto" />

    <TextView
        android:id="@+id/tv_cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_cantidad"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCantidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerProducto" />

    <Spinner
        android:id="@+id/spinnerCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSiguiente_hacerpedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cantidad" />

    <Button
        android:id="@+id/btnSiguiente_hacerpedido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/btnSiguiente_hacerpedido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCantidad" />
</androidx.constraintlayout.widget.ConstraintLayout>